Added git patch files to gitignore
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,8 @@ target
 #idea project files
 *.iml
 
+#patches
+*.patch
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
