--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.2.1.v20140609</version>
+            </plugin>
         </plugins>
     </build>
 </project>
