--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>angularjs</artifactId>
-            <version>1.2.16-2</version>
+            <version>1.2.21</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
