--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,7 @@
                 <configuration>
                     <stopPort>8081</stopPort>
                     <stopKey>stop</stopKey>
+                    <useTestClasspath>true</useTestClasspath>
                 </configuration>
                 <executions>
                     <execution>
