--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,11 @@
             <artifactId>swagger-ui</artifactId>
             <version>2.0.22</version>
         </dependency>
+        <dependency>
+            <groupId>org.hornetq</groupId>
+            <artifactId>hornetq-spring-integration</artifactId>
+            <version>2.4.3.Final</version>
+        </dependency>
     </dependencies>
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
