--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,11 @@
             <artifactId>hornetq-spring-integration</artifactId>
             <version>2.4.3.Final</version>
         </dependency>
+        <dependency>
+            <groupId>javax.websocket</groupId>
+            <artifactId>javax.websocket-api</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
