--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,27 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>com.github.searls</groupId>
+                <artifactId>jasmine-maven-plugin</artifactId>
+                <version>1.3.1.5</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <jsSrcDir>${project.basedir}/src/main/webapp/js</jsSrcDir>
+                    <jsTestSrcDir>${project.basedir}/src/test/js</jsTestSrcDir>
+                    <preloadSources>
+                        <source>webjars/angularjs/1.2.21/angular.min.js</source>
+                        <source>webjars/angular-ui-bootstrap/0.11.0/ui-bootstrap-tpls.min.js</source>
+                        <source>${project.basedir}/src/main/webapp/js/app.js</source>
+                    </preloadSources>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.3</version>
