--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,12 @@
             <artifactId>swagger-jaxrs_2.10</artifactId>
             <version>1.3.7</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.ws.rs</groupId>
+                    <artifactId>jsr311-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.wordnik</groupId>
@@ -135,6 +141,10 @@
                 <exclusion>
                     <groupId>org.scala-lang</groupId>
                     <artifactId>scalap</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.ws.rs</groupId>
+                    <artifactId>jsr311-api</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
