added test for version info controller
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -255,6 +255,9 @@
                     <jsTestSrcDir>${project.basedir}/src/test/js</jsTestSrcDir>
                     <preloadSources>
                         <source>webjars/angularjs/1.2.21/angular.min.js</source>
+                        <source>webjars/angularjs/1.2.21/angular-mocks.js</source>
+                        <source>webjars/angularjs/1.2.21/angular-route.js</source>
+                        <source>webjars/angularjs/1.2.21/angular-loader.js</source>
                         <source>webjars/angular-ui-bootstrap/0.11.0/ui-bootstrap-tpls.min.js</source>
                         <source>${project.basedir}/src/main/webapp/js/app.js</source>
                     </preloadSources>
