--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,10 @@
 *.class
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
 #maven target dir
 target
 
 #idea project files
+.idea
 *.iml
 
 #patches
