--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <kotlin.version>0.8.11</kotlin.version>
         <spring.version>4.1.0.RELEASE</spring.version>
         <cxf.version>3.0.1</cxf.version>
-        <infinispan.version>7.0.0.Beta2</infinispan.version>
+        <infinispan.version>7.0.0.CR1</infinispan.version>
         <angularjs.version>1.2.25</angularjs.version>
         <angular-bootstrap.version>0.11.0-3</angular-bootstrap.version>
         <slf4j.version>1.7.7</slf4j.version>
