--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
         <url>https://github.com/K0zka/</url>
     </organization>
     <properties>
-        <kotlin.version>0.8.1527</kotlin.version>
-        <spring.version>4.1.0.RELEASE</spring.version>
+        <kotlin.version>0.9.66</kotlin.version>
+        <spring.version>4.1.1.RELEASE</spring.version>
         <cxf.version>3.0.1</cxf.version>
         <infinispan.version>7.0.0.CR1</infinispan.version>
         <angularjs.version>1.2.26</angularjs.version>
@@ -160,7 +160,7 @@
         <dependency>
             <groupId>org.hornetq</groupId>
             <artifactId>hornetq-spring-integration</artifactId>
-            <version>2.4.3.Final</version>
+            <version>2.4.4.Final</version>
         </dependency>
         <dependency>
             <groupId>javax.websocket</groupId>
@@ -207,6 +207,7 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>9.2.3.v20140905</version>
                 <configuration>
+                    <jvmArgs>-Xmx2024m -Xms2024m</jvmArgs>
                     <stopPort>8081</stopPort>
                     <stopKey>stop</stopKey>
                     <useTestClasspath>true</useTestClasspath>
@@ -220,7 +221,6 @@
                         </goals>
                         <configuration>
                             <scanIntervalSeconds>0</scanIntervalSeconds>
-                            <daemon>true</daemon>
                         </configuration>
                     </execution>
                     <execution>
