--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,8 @@
                             <goal>run-exploded</goal>
                         </goals>
                         <configuration>
+                            <dumpOnStart>true</dumpOnStart>
+                            <daemon>true</daemon>
                             <scanIntervalSeconds>0</scanIntervalSeconds>
                         </configuration>
                     </execution>
