added host to controller assignment logic
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>
Bug-Url: https://github.com/K0zka/kerub/issues/3

--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,11 @@
             <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.K0zka</groupId>
+            <artifactId>finder4j-backtrack</artifactId>
+            <version>0.1</version>
+        </dependency>
     </dependencies>
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
