--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,12 @@
     <properties>
         <kotlin.version>0.9.66</kotlin.version>
         <spring.version>4.1.1.RELEASE</spring.version>
-        <cxf.version>3.0.1</cxf.version>
-        <infinispan.version>7.0.1.Final</infinispan.version>
+        <cxf.version>3.0.3</cxf.version>
+        <infinispan.version>7.0.2.Final</infinispan.version>
         <angularjs.version>1.2.26</angularjs.version>
         <angular-bootstrap.version>0.11.2</angular-bootstrap.version>
         <slf4j.version>1.7.7</slf4j.version>
+        <cucumber.version>1.2.0</cucumber.version>
     </properties>
     <dependencies>
         <dependency>
@@ -92,11 +93,6 @@
         <dependency>
             <groupId>org.infinispan</groupId>
             <artifactId>infinispan-core</artifactId>
-            <version>${infinispan.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.infinispan</groupId>
-            <artifactId>infinispan-spring</artifactId>
             <version>${infinispan.version}</version>
         </dependency>
         <dependency>
