--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,25 @@
         <testSourceDirectory>src/test/kotlin</testSourceDirectory>
         <plugins>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.6</version>
+                <configuration>
+                    <portNames>
+                        <portName>jetty.port.stop</portName>
+                    </portNames>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>reserve-port</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>reserve-network-port</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <version>${kotlin.version}</version>
@@ -226,7 +245,7 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>${jetty.version}</version>
                 <configuration>
-                    <stopPort>8081</stopPort>
+                    <stopPort>${jetty.port.stop}</stopPort>
                     <stopKey>stop</stopKey>
                     <contextXml>src/build/env/jetty.xml</contextXml>
                 </configuration>
@@ -241,7 +260,6 @@
                             <dumpOnStart>true</dumpOnStart>
                             <daemon>true</daemon>
                             <scanIntervalSeconds>0</scanIntervalSeconds>
-
                         </configuration>
                     </execution>
                     <execution>
