--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <url>https://github.com/K0zka/</url>
     </organization>
     <properties>
-        <kotlin.version>0.11.91.4</kotlin.version>
+        <kotlin.version>0.12.213</kotlin.version>
         <spring.version>4.1.1.RELEASE</spring.version>
         <cxf.version>3.0.3</cxf.version>
         <infinispan.version>7.2.2.Final</infinispan.version>
@@ -174,7 +174,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
-            <version>${jackson.version}</version>
+            <version>2.5.3.1</version>
         </dependency>
         <dependency>
             <groupId>org.hornetq</groupId>
