--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
         <dependency>
             <groupId>org.apache.sshd</groupId>
             <artifactId>sshd-core</artifactId>
-            <version>0.12.0</version>
+            <version>0.14.0</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -248,6 +248,11 @@
             <artifactId>httpclient</artifactId>
             <version>4.4.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
         </dependency>
     </dependencies>
     <build>
