--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
     <description>Infrastructure as a Service prototype app</description>
     <url>https://github.com/K0zka/kerub</url>
     <inceptionYear>2014</inceptionYear>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+        </license>
+    </licenses>
     <organization>
         <name>Duct Tape Solutions LTD</name>
         <url>https://github.com/K0zka/</url>
@@ -250,7 +256,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
