fixup: websocket java client only in test scope
Bug-Url: https://github.com/K0zka/kerub/issues/6
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -270,6 +270,7 @@
             <groupId>org.eclipse.jetty.websocket</groupId>
             <artifactId>websocket-client</artifactId>
             <version>${jetty.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
