--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <cxf.version>3.1.2</cxf.version>
         <infinispan.version>7.2.4.Final</infinispan.version>
         <angularjs.version>1.3.17</angularjs.version>
-        <angular-bootstrap.version>0.13.3</angular-bootstrap.version>
+        <angular-bootstrap.version>0.14.3</angular-bootstrap.version>
         <slf4j.version>1.7.12</slf4j.version>
         <cucumber.version>1.2.4</cucumber.version>
         <jackson.version>2.6.3</jackson.version>
@@ -85,14 +85,19 @@
             <version>2.0.0</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${spring.version}</version>
+            <groupId>org.webjars</groupId>
+            <artifactId>font-awesome</artifactId>
+            <version>4.4.0</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>angular-uuid4</artifactId>
             <version>0.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
