--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <url>https://github.com/K0zka/</url>
     </organization>
     <properties>
-        <kotlin.version>1.0.0-beta-3595</kotlin.version>
+        <kotlin.version>1.0.0-beta-4584</kotlin.version>
         <spring.version>4.1.1.RELEASE</spring.version>
         <cxf.version>3.1.4</cxf.version>
         <infinispan.version>7.2.4.Final</infinispan.version>
@@ -47,6 +47,12 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
             <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test</artifactId>
+            <version>${kotlin.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
