--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
-            <version>2.6.3-1</version>
+            <version>2.6.5</version>
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
