--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
         <spring.version>4.1.1.RELEASE</spring.version>
         <cxf.version>3.1.4</cxf.version>
         <infinispan.version>8.1.0.Final</infinispan.version>
-        <angularjs.version>1.3.17</angularjs.version>
-        <angular-bootstrap.version>0.14.3</angular-bootstrap.version>
+        <angularjs.version>1.4.9</angularjs.version>
+        <angular-bootstrap.version>1.1.1-1</angular-bootstrap.version>
         <slf4j.version>1.7.13</slf4j.version>
         <cucumber.version>1.2.4</cucumber.version>
         <jackson.version>2.6.5</jackson.version>
