--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     </licenses>
     <organization>
         <name>Duct Tape Solutions LTD</name>
-        <url>https://github.com/K0zka/</url>
+        <url>https://github.com/kerubistan/kerub</url>
     </organization>
     <properties>
         <kotlin.version>1.0.0-rc-1036</kotlin.version>
